# barte-python-sdk

./: README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: new_workflow.yml  tests.yml
barte/: __init__.py  client.py  models.py
examples/: basic_usage.py  card_token_example.py  card_token_transaction_example.py  credit_card_advanced_example.py  pix_example.py
tests/: conftest.py  test_client.py  test_integration.py
