[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "barte-python-sdk"
version = "0.1.0"
description = "Python SDK for integration with Barte API"
authors = [{ name = "Thiago Avelino", email = "thiago.avelino@buser.com.br" },
    { name = "Erle Carrara", email = "erle.carrara@buser.com.br" },
    { name = "Walisson Filipe", email = "walison.filipe@buser.com.br" },
    { name = "Marcos Grandesso", email = "marcos.viana@buser.com.br" },
]
dependencies = [
    "requests>=2.25.0"
]
requires-python = ">=3.10"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/barte_python_sdk"]

[project.urls]
Documentation = "https://github.com/buserbrasil/barte-python-sdk#readme"
Issues = "https://github.com/buserbrasil/barte-python-sdk/issues"
Source = "https://github.com/buserbrasil/barte-python-sdk"