[project]
name = "barte-python-sdk"
version = "0.1.0"
description = "Python SDK for integration with Barte API"
requires-python = ">=3.11"
authors = [{ name = "Thiago Avelino", email = "thiago.avelino@buser.com.br" },
    { name = "Erle Carrara", email = "erle.carrara@buser.com.br" },
    { name = "Walison Filipe", email = "walison.filipe@buser.com.br" },
    { name = "Marcos Grandesso", email = "marcos.viana@buser.com.br" },
]
dependencies = ["requests==2"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.uv]
package = true
dev-dependencies = [
    "pytest>=7.0.0",
    "requests-mock>=1.10.0",
    "pytest-cov>=4.0.0"
]